compiler/chipc-ast/tests/snapshots/snapshot__main@empty.chip.snap
---
source: compiler/chipc-ast/tests/snapshot.rs
assertion_line: 10
expression: printer.0.trim()
input_file: tests/snapshot/src/cases/empty.chip
---
file
