compiler/chipc-ast/tests/snapshots/snapshot__main@extern.chip.snap
---
source: compiler/chipc-ast/tests/snapshot.rs
assertion_line: 10
expression: printer.0.trim()
input_file: tests/snapshot/src/cases/extern.chip
---
file
  extern block
    extern function
      name: foreign
      input: n
        type: basic
          path: u8
  function
    name: the_answer
    modifier: extern
    output: basic
      path: u8
    body: num_lit: 42
