compiler/chipc-ast/tests/snapshots/snapshot__main@extern.snap
---
source: compiler/chipc-ast/tests/snapshot.rs
assertion_line: 11
expression: printer.0.trim()
---
file
  extern block "C"
    extern function
      name: foreign
      input: n
        type: basic
          path: u8
  function
    name: the_answer
    modifier: extern "C"
    output: basic
      path: u8
    body: num_lit: 42
