compiler/chipc-ast/tests/snapshots/snapshot__main@simple.chip.snap
---
source: compiler/chipc-ast/tests/snapshot.rs
assertion_line: 10
expression: printer.0.trim()
input_file: tests/snapshot/src/cases/simple.chip
---
file
  function
    name: f
    body: unit
