compiler/chipc-ast/tests/snapshots/snapshot__main@simple.snap
---
source: compiler/chipc-ast/tests/snapshot.rs
assertion_line: 11
expression: printer.0.trim()
---
file
  function
    name: f
    body: unit
